fix CI files and licence path

--- a/.gitlab-ci-files/job-linux-desktop.yml
+++ b/.gitlab-ci-files/job-linux-desktop.yml
@@ -11,26 +11,18 @@
     - cmake --version
     - export CC=$CC
     - export CXX=$CXX
-    - mkdir -p build-desktop/OUTPUT
+    - mkdir -p build/OUTPUT
     - echo $CMAKE_GENERATOR
     - echo $DEFAULT_LINUX_CMAKE_OPTIONS
     - echo $CMAKE_OPTIONS
     - echo $CMAKE_SANITIZER_OPTIONS
 # SDK Building
-    - cd build-desktop
+    - cd build
     - cmake .. -G "$CMAKE_GENERATOR" -DCMAKE_VERBOSE_MAKEFILE=ON -DLINPHONESDK_PLATFORM=Desktop $DEFAULT_LINUX_CMAKE_OPTIONS $CMAKE_OPTIONS $SCHEDULE_CMAKE_OPTIONS $CMAKE_SANITIZER_OPTIONS 
-    - cmake --build . --target sdk $LBC_NODEBUG_OPTIONS
-# Minizip install to OUTPUT folder
-    - cmake ..
-    - cmake --build . --target minizip $LBC_NODEBUG_OPTIONS
-    - cmake --build . --target install $LBC_NODEBUG_OPTIONS
-# Update CMake installation    
-    - cmake .. -G "$CMAKE_GENERATOR" $DEFAULT_LINUX_CMAKE_OPTIONS $CMAKE_OPTIONS $SCHEDULE_CMAKE_OPTIONS $CMAKE_SANITIZER_OPTIONS 
-    - cmake --build . --target linphone-qt $LBC_NODEBUG_OPTIONS
-    - cmake --build . --target install
+    - cmake --build . --target all $LBC_NODEBUG_OPTIONS
 
   artifacts:
     paths:
-      - build-desktop/OUTPUT
+      - build/OUTPUT
     expire_in: 1 week
 
