--- a/.gitlab-ci-files/job-windows-desktop.yml
+++ b/.gitlab-ci-files/job-windows-desktop.yml
@@ -54,9 +54,9 @@
   script:
     - SET Qt5_DIR=C:\Qt\5.12.6\msvc2017\lib\cmake
     - SET PATH=%PATH%;C:\Qt\5.12.6\msvc2017\bin
-    - IF EXIST build-desktop RMDIR /S /Q build-desktop
-    - mkdir build-desktop
-    - cd build-desktop
+    - IF EXIST build RMDIR /S /Q build
+    - mkdir build
+    - cd build
     - mkdir OUTPUT
 #SDK  Building
     #we launch the msvc-cl wrapper located in python scripts folder
@@ -65,19 +65,11 @@
     - C:\PROGRA~1\Python37\Scripts\cl -s    
     - cmake .. -G "Visual Studio 15 2017" -DLINPHONESDK_PLATFORM=Desktop -DENABLE_CSHARP_WRAPPER=YES -DCMAKE_BUILD_TYPE=Release %DEFAULT_WINDOWS_CMAKE_OPTIONS% %CMAKE_OPTIONS%
     - cmake --build . --target ALL_BUILD --config Release %LBC_NODEBUG_OPTIONS% -- /maxcpucount /nodeReuse:true /p:TrackFileAccess=false
-# Minizip install to OUTPUT folder    
-    - cmake ..
-    - cmake --build . --target minizip
-    - cmake --build . --target install --config Release %LBC_NODEBUG_OPTIONS% -- /maxcpucount /nodeReuse:true /p:TrackFileAccess=false
-# Update CMake installation    
-    - cmake .. -G "Visual Studio 15 2017" -DCMAKE_BUILD_TYPE=Release %DEFAULT_WINDOWS_CMAKE_OPTIONS% %CMAKE_OPTIONS%
-    - cmake --build . --target linphone-qt --config Release -- /maxcpucount /nodeReuse:true /p:TrackFileAccess=false
-    - cmake --build . --target install --config Release -- /maxcpucount /nodeReuse:true /p:TrackFileAccess=false
     - C:\PROGRA~1\Python37\Scripts\cl -s
 
   artifacts:
     paths:
-      - build-desktop\OUTPUT
+      - build\OUTPUT
     expire_in: 2 days
             
 .job-windows-vs2017-scheduled:
@@ -124,28 +116,21 @@ job-windows-vs2017-package:
   script:
     - SET Qt5_DIR=C:\Qt\5.12.6\msvc2017\lib\cmake
     - SET PATH=%PATH%;C:\Qt\5.12.6\msvc2017\bin
-    - IF EXIST build-desktop RMDIR /S /Q build-desktop
-    - mkdir build-desktop
-    - cd build-desktop
+    - IF EXIST build RMDIR /S /Q build
+    - mkdir build
+    - cd build
     - mkdir OUTPUT
 #SDK  Building
     #we launch the msvc-cl wrapper located in python scripts folder
     #this wrapper relays only needed calls to the real compiler    
     #cache stats display
     - C:\PROGRA~1\Python37\Scripts\cl -s    
-    - cmake .. -G "Visual Studio 15 2017" -DLINPHONESDK_PLATFORM=Desktop -DENABLE_CSHARP_WRAPPER=YES -DCMAKE_BUILD_TYPE=Release %DEFAULT_WINDOWS_CMAKE_OPTIONS% %CMAKE_OPTIONS%
+    - cmake .. -G "Visual Studio 15 2017" -DLINPHONESDK_PLATFORM=Desktop -DENABLE_CSHARP_WRAPPER=YES -DCMAKE_BUILD_TYPE=Release -DENABLE_PACKAGING=YES %DEFAULT_WINDOWS_CMAKE_OPTIONS% %CMAKE_OPTIONS%
     - cmake --build . --target ALL_BUILD --config Release %LBC_NODEBUG_OPTIONS% -- /maxcpucount /nodeReuse:true /p:TrackFileAccess=false
-# Minizip install to OUTPUT folder    
-    - cmake ..
-    - cmake --build . --target minizip
-    - cmake --build . --target install --config Release %LBC_NODEBUG_OPTIONS% -- /maxcpucount /nodeReuse:true /p:TrackFileAccess=false
-# Update CMake installation    
-    - cmake .. -G "Visual Studio 15 2017" -DCMAKE_BUILD_TYPE=Release %DEFAULT_WINDOWS_CMAKE_OPTIONS% %CMAKE_OPTIONS%
-    - cmake --build . --target linphone-qt --config Release -- /maxcpucount /nodeReuse:true /p:TrackFileAccess=false
-    - cmake --build . --target package --config Release -- /maxcpucount /nodeReuse:true /p:TrackFileAccess=false
     - C:\PROGRA~1\Python37\Scripts\cl -s
     - mkdir "%CI_PROJECT_DIR%/results"
-    - cd CPackBuild
+    - cd OUTPUT
+    - cd Packages
     - copy /B *.exe "%CI_PROJECT_DIR%/results"
     
   artifacts:
